# sanoTTS

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
arduino/: README.md  idf_component.yml  library.json  library.properties
arduino/extras/: README.md  gen_golden_ids.py  host_check.sh  host_check_cpp_main.cpp  host_check_main.c
arduino/src/: SanoTTS.cpp  SanoTTS.h  snt_front_f32.h  snt_piperlite.c  snt_piperlite.h  snt_piperlite_q8.c  snt_piperlite_q8.h  snt_port_default.c  snt_tts.c  snt_tts.h
configs/: README.md  roota-piper-teachers.example.json
docs/: distillation-recipe.md  mcu-classes-and-porting.md  repository-layout.md  roota-language-porting-recipe.md
docs/assets/: generate_hero_v2.py
mcu/: INT16_CHAIN.md  Makefile  README.md
mcu/include/: snt_port.h  snt_tts.h
mcu/src/: snt_front_f32.c  snt_kernels_ref.c  snt_tts.c
mcu/test/: front_golden_test.c  golden_c3  golden_main.c  piperlite_golden_test.c  piperlite_q8_golden_test.c
npmpkg/: README.md  package.json  sanotts-web-0.1.0.tgz
npmpkg/src/: index.js
npmpkg/test/: index.html
pypkg/: pyproject.toml
pypkg/sanotts/: __init__.py  cli.py  engine.py  frontend.py  models.py  voicepack.py
pypkg/sanotts/tables/: voices.json
src/saanotts/: __init__.py  (+1 more)
tools/: build_piper_vits_roota_probe_pack.py  calibrate_sibilant_noise.py  calibrate_sibilant_noise_fsd.py  eval_g2p_parity.py  eval_mos_all.py  eval_phoneme_class_fidelity.py  eval_scorecard.py  extract_piper_vits_decoder_cut.py  g2p_parity_probe.py  render_crude_frontend.py  render_eval_dirs.py  roota_fsd_blocks.py  serve_roota_arbitrary_tts_dashboard.py  train_roota_audio_enhancer.py  train_roota_joint_z_finetune.py  train_roota_piper_decoder_student.py  train_roota_piper_duration_student.py  train_roota_piper_latent_student.py
web/: index.html  snt_g2p.data  snt_g2p.js  snt_g2p.wasm  snt_tts.js  snt_tts.wasm  snt_voice.js  snt_voice.wasm
(+105 files in other folders)
